--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@ html {
       <div class="container">
         <h2>Sreelal MB</h2>
         <p class="title">Designer</p>
-        <p>Paravoor pooran</p>
+        <p>Shonnii Manii</p>
         <p>mani@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
