--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@ html {
 
 <div class="about-section">
   <h1>Nammyellamm Yarrrrr....</h1>
-  <p>Single passange.... ponna patha manna pakkum...single pasanka.....</p>
+  <p>Single passange.... ponna patha manna pakkum...single pasanka.....😭😭😭😭😭😭😭</p>
 </div>
 
 <h2 style="text-align:center">Our Team</h2>
